# merlin

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.old  NEWS  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/html/: README_8md_source.html  algorithm_8h.html  algorithm_8h_source.html  annotated.html  annotated.js  base_8h.html  base_8h_source.html  classMerlin-members.html  classMerlin.html  classMerlin.js  classes.html  classmerlin_1_1algorithm-members.html  classmerlin_1_1algorithm.html  classmerlin_1_1factor-members.html  classmerlin_1_1factor.html  classmerlin_1_1factor__graph-members.html  classmerlin_1_1factor__graph.html  classmerlin_1_1factor__graph.js  classmerlin_1_1factor__graph_1_1abstract__queue-members.html  classmerlin_1_1factor__graph_1_1abstract__queue.html  classmerlin_1_1factor__graph_1_1abstract__queue__fifo-members.html  classmerlin_1_1factor__graph_1_1abstract__queue__fifo.html  classmerlin_1_1factor__graph_1_1abstract__queue__lifo-members.html  classmerlin_1_1factor__graph_1_1abstract__queue__lifo.html  classmerlin_1_1gibbs-members.html  classmerlin_1_1gibbs.html  (+178 more)
example/: .gitignore  Makefile.am  Makefile.in  demo.cpp  mrf.wcnf.uai  pedigree1.map  simple5.map
example/.deps/: .gitignore
include/: Makefile.am  Makefile.in  algorithm.h  base.h  be.h  bte.h  cte.h  enum.h  factor.h  factor_graph.h  gibbs.h  graph.h  graphical_model.h  ijgp.h  index.h  indexed_heap.h  jglp.h  lbp.h  merlin.h  set.h  util.h  var.h  varset.h  vector.h  wmb.h
src/: .gitignore  Makefile.am  Makefile.in  bte.cpp  cte.cpp  em.cpp  graph.cpp  ijgp.cpp  lbp.cpp  merlin.cpp  run.cpp  wmb.cpp
src/.deps/: .gitignore
src/.libs/: .gitignore
test/: .gitignore
(+68 files in other folders)
